syntax = "proto3";

package protos;
//common response objects returned by bitbucket api

message LinkUrl {
    string href = 1;
}

message LinkAndName {
    string href = 1;
    string name = 2;
}

message Links {
    LinkUrl self = 1;
    LinkUrl html = 2;
    LinkUrl avatar = 3;
    LinkUrl commits = 4;
    LinkUrl comments = 5;
    LinkUrl statuses = 6;
    LinkUrl approve = 7;
    LinkUrl decline = 8;
    LinkUrl merge = 9;
}
